<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoForLunch</string>
    <string name="go4lunch" translatable="false">GO4LUNCH</string>
    <string name="connection">Connection</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1356920871131768</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb1356920871131768</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="nav_header_desk">nav_header_desk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_icon">Map </string>
    <string name="list_icon">List View</string>
    <string name="workmates_icon">Workmates</string>
    <string name="chat_icon">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_toolbar">I\'m Hungry!</string>
    <string name="title_toolbar_setting">Setting</string>


    <!-- LOGIN -->
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="error_uknown_error" translatable="false">error_unknown_error</string>
    <string name="modify_your_name">Update your name</string>
    <string name="modify_your_email">Update your email</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="set_your_radius_search">set your radius search in meters</string>
    <string name="check_to_receive_a_notification_at_12h00">Check to receive a notification at 12h00</string>
    <string name="update_your_preferences">Update your preferences</string>
    <string name="delete_profile">Delete profile</string>
    <string name="hasnt_decided_yet">%s hasn\'t decided yet</string>
    <string name="there_is_no_message_in_this_chat_yet">There is no message in this chat yet...</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">SEND</string>
    <string name="eating">is eating at</string>
    <string name="AppTitle" translatable="false">GoForLunch</string>
    <string name="Reminder">Reminder for your choice</string>
    <string name="LIKE">YOU LIKED</string>
    <string name="ToLike">LIKE</string>
    <string name="NoName">No name</string>
    <string name="administrator_notif">Message from Go4Lunch</string>
    <string name="choose_restaurant">You didn\'t choose any restaurant yet</string>
    <string name="success_auth">Successful login</string>
    <string name="cancelled_auth">cancelling authentification</string>
    <string name="no_connection">No network connection</string>
    <string name="error_happened">An error happened</string>
    <string name="Hi">Hi</string>
    <string name="choose_eating">you choose  to eat</string>
    <string name="restaurant">at the restaurant</string>
    <string name="delete_message">are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_this_restaurant">You choose this restaurant</string>
    <string name="make_choice">Make your choice</string>
    <string name="delete_profile_msg">your profile was deleted</string>
    <string name="no_information">no information</string>


</resources>
