<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/map_view"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/map_icon"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/list_view"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/list_icon"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/workmates"
        android:enabled="true"
        android:icon="@drawable/workmates"
        android:title="@string/workmates_icon"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/chat_icon"
        app:showAsAction="always|withText"/>




</menu>